--- a/src/css/epp.css
+++ b/src/css/epp.css
@@ -2,12 +2,33 @@
     margin: 0;
 }
 
-.eppContainer{
-    position: relative;
+.epprow{
+    padding: 0 5%;
 }
 
-.eppSubCont{
-    padding: 0 5% 0;
+.eppidrow{
+    width: 100%;
+    height: 68px;
+    border-bottom: 2px solid whitesmoke;
+    margin: 0;
+}
+
+.title{
+    text-align: right;
+}
+
+.eppnum{
+    text-align: left;
+    padding: 12px 0 0;
+}
+
+.eppnum>p{
+    margin: 0;
+}
+
+.min{
+    border-bottom: 2px solid whitesmoke;
+    margin-bottom: 36px;
 }
 
 @media (min-width: 768px) {
