--- a/src/css/options.css
+++ b/src/css/options.css
@@ -6,6 +6,7 @@
 .opcoesAlignLeft{
     text-align: left;
     margin-top: 36px;
+    padding-left: 10%;
 }
 
 .pdr{
@@ -16,6 +17,19 @@
 
 .butino{
     margin: 5px 0;
+    background-color: #00847a;
+    border:0;
+}
+.butino:hover{
+    margin: 5px 0;
+    background-color: #6d6d6d;
+    border:0;
+}
+
+.butino:active{
+    margin: 5px 0;
+    background-color: #3d3d3d;
+    border:0;
 }
 
 .n-pdr{
@@ -38,13 +52,17 @@ input[type="time"]{
     background-color: #00847a;
 }
 
+.question-mark{
+    float: right;
+    margin-right: 15%;
+}
+
 @media (min-width: 768px) {
     .form-horizontal {
         max-width: 800px;
         margin-bottom: 20px;
     }
     .opcoesAlignCenter{
-        text-align: center;
         padding: 0 auto;
         margin: 0 auto;
     }
