Epp screen beworking! yayayay

--- a/src/css/header.css
+++ b/src/css/header.css
@@ -7,6 +7,7 @@
 .headerLogo {
     /*animation: App-logo-spin infinite 20s linear;
     height: 20px;*/
+    width: 66%;
     position: relative;
     left: 26%;
     top: 15px;
