--- a/src/css/style.css
+++ b/src/css/style.css
@@ -189,8 +189,6 @@
     margin-left: 10%;
 }
 
-
-
 /* Bluetooth */
 
 .titulo_blue {
@@ -296,6 +294,12 @@ body {
 
 img{
     cursor: pointer;
+}
+
+
+.login-wrapper{
+    color: whitesmoke;
+    text-align: center;
 }
 
 /*
