--- a/src/css/prefs.css
+++ b/src/css/prefs.css
@@ -31,9 +31,13 @@
 }
 
 .btn-sm{
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
     width: 100%;
     height: 100%;
 }
+
 .prefs-list{
     text-align: center;
     margin-top: 24px;
