--- a/src/css/epp.css
+++ b/src/css/epp.css
@@ -14,6 +14,7 @@
 }
 
 .title{
+    font-size: 1.5em;
         text-align: right;
         margin:0;
         padding:0;
@@ -31,6 +32,10 @@
 .min{
     border-bottom: 2px solid whitesmoke;
     margin-bottom: 36px;
+}
+
+.eppContainer{
+    margin: 0 15% 20px;
 }
 
 @media (min-width: 768px) {
