--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -124,7 +124,7 @@ img{
     position: fixed;
     top: 0;
     left: 0;
-    z-index: 3;
+    z-index: 5;
     height: 100%;
     width: 100%;
 }
@@ -175,49 +175,62 @@ img{
 }*/
 
 
-.list-title{
+.lista-title{
     padding-bottom: 1.5em;
 
 }
 
 @media (min-width: 2560px) {
-    .list-title{
+    .lista-title{
         font-size:2.6em;
     }
 }
 
 @media (max-width: 1440px) {
-    .list-title{
+    .lista-title{
         font-size: 2.4em;
     }
 }
 
 @media (max-width: 1024px) {
-    .list-title{
+    .lista-title{
         font-size:2.3em;
     }
 }
 
 @media (max-width: 768px) {
-    .list-title{
+    .lista-title{
         font-size:2.0em;
     }
 }
 
 @media (max-width: 425px) {
-    .list-title{
+    .lista-title{
         font-size:1.7em;
     }
 }
 
 @media (max-width: 375px) {
-    .list-title{
+    .lista-title{
         font-size:1.4em;
     }
 }
 
 @media (max-width: 320px) {
-    .list-title{
+    .lista-title{
         font-size:1.2em;
     }
+}
+
+@media (max-width: 365px){
+
+    .celulas{
+        margin: 0 auto;
+        margin-left: 25%;
+        padding: 3px 6px;
+    }
+}
+
+nav{
+    z-index:3;
 }
